# tsclient

./: Makefile  README.md  add-tsc-libs.patch  client-host-name.patch  color-depth.patch  tsclient-xdmcp.patch  tsclient.spec
src/: AUTHORS  Makefile.am  Makefile.in  TODO  aclocal.m4  config.h.in  configure  configure.ac
src/data/: Makefile.am  Makefile.in  tsc-autostart.desktop  tsc-handlers.schemas  tsclient.desktop.in  tsclient.glade  tsclient.xml
src/po/: POTFILES.in  de.po  es.po  fr.po  it.po  ja.po  ko.po  nl.po  zh_CN.po  zh_TW.po
src/src/: Makefile.am  Makefile.in  tsc-bookmarkfile.c  tsc-bookmarkfile.h  tsc-connection-model.c  tsc-connection-model.h  tsc-connection.c  tsc-connection.h  tsc-edit-dialog.c  tsc-edit-dialog.h  tsc-main.c  tsc-manager.c  tsc-manager.h  tsc-marshal.c  tsc-marshal.h  tsc-network.c  tsc-network.h  tsc-provider.c  tsc-provider.h  tsc-spawn.c  tsc-spawn.h  tsc-util.c  tsc-util.h  tsc-window.c  tsc-window.h
src/src/plugins/: Makefile.in
src/src/plugins/default/: Makefile.am  Makefile.in  tsc-default.c  tsc-generic-connection.c  tsc-generic-connection.h  tsc-generic-edit-dialog.c  tsc-generic-edit-dialog.h  tsc-generic-provider.c  tsc-generic-provider.h  tsc-ica-connection.c  tsc-ica-connection.h  tsc-ica-provider.c  tsc-ica-provider.h  tsc-mainframe-connection.c  tsc-mainframe-connection.h  tsc-mainframe-edit-dialog.c  tsc-mainframe-edit-dialog.h  tsc-mainframe-provider.c  tsc-mainframe-provider.h  tsc-rdp-connection.c  tsc-rdp-connection.h  tsc-rdp-edit-dialog.c  tsc-rdp-edit-dialog.h  tsc-rdp-provider.c  tsc-rdp-provider.h  tsc-ssh-askpass  tsc-ssh-connection.c  tsc-ssh-connection.h  tsc-ssh-edit-dialog.c  tsc-ssh-edit-dialog.h  tsc-ssh-provider.c  tsc-ssh-provider.h  tsc-vnc-connection.c  tsc-vnc-connection.h  tsc-vnc-edit-dialog.c  tsc-vnc-edit-dialog.h  tsc-vnc-provider.c  tsc-vnc-provider.h  tsc-web-connection.c  tsc-web-connection.h  (+10 more)
